--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,3 +1,11 @@
 <h1>Sign Up Below:</h1>
-
+<form action="/registrations" method="post">
+    <h2>Name</h2>
+    <p><input id="name" type="text" name="name"></p>
+    <h2>Email</h2>
+    <p><input id="email" type="text" name="email"></p>
+    <h2>Password</h2>
+    <p><input id="password" type="text" name="password"></p>
+    <input type="submit" key="submit" value="Sign Up!">
+</form>
 
